[package]
name = "axum-lab"
version = "0.0.1"
edition = "2021"
authors = ["Eric Le Goff <elegoff@pm.me>"]

[dependencies]
tokio = { version ="1", features = ["full"]}
serde = { version ="1", features = ["derive"]}
serde_json = "1"
# Axum
axum = "0.7"

[dev-dependencies]
anyhow = "1"

httpc-test = "0.1"
