[package]
name = "axum-lab"
version = "0.0.1"
edition = "2021"
authors = ["Eric Le Goff <elegoff@pm.me>"]

[dependencies]
tokio = { version ="1", features = ["full"]}

# Serde
serde = { version ="1", features = ["derive"]}
serde_json = "1"
serde_with = "3.6"
# Axum
axum = "0.7"
tower-http = {version ="0.5", features = ["fs"]}
tower-cookies = "0.10"
# Misc
lazy-regex = "3.1.0"
async-trait = "0.1"
strum_macros = "0.26"
uuid = {version = "1.7", features =["v4", "fast-rng"]}
[dev-dependencies]
anyhow = "1"

httpc-test = "0.1"
